[tool.poetry]
name = "transmission-clutch"
version = "3.0.0.dev5"
description = "An RPC client library for the Transmission BitTorrent client"
authors = ["mhadam <michael@hadam.us>"]
repository = "https://github.com/mhadam/clutch"
documentation = "https://clutch.readthedocs.io/en/latest/"
readme = "README.rst"
license = "MIT"
packages = [{ include = "clutch" }]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
pydantic = "^1.4"
typing-extensions = {version = "^3.7.4", python = "3.6 || 3.7"}

[tool.poetry.dev-dependencies]
pytest = "^4.6"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
