[metadata]
name = transmission-clutch
author = Michael Hadam
author-email = michael@hadam.us
summary = Transmission RPC for Python
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/mhadam/clutch
project_urls =
    Bug Tracker = https://github.com/mhadam/clutch/issues
    Documentation = https://github.com/mhadam/clutch/wiki
    Source Code = https://github.com/mhadam/clutch
license = GPLv3
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python

[bdist_wheel]
universal = 1

[files]
packages =
    clutch